link fixed, text-align and white-space added

--- a/styles/introduction.css
+++ b/styles/introduction.css
@@ -12,7 +12,7 @@
   border-bottom: 1px dotted #cccccc;
   transition-duration: 0.25s;
 }
-.introduction-p{
+.introduction-p,.introduction-p-left{
   width: 28em;
   min-width: min-content;
   display: flex;
@@ -20,6 +20,10 @@
   margin-right: auto;
   justify-content: space-between;
   font-style: italic;
+  align-items: center;
+}
+.introduction-p{
+  text-align: right;
 }
 .chapter, .author{
   font-size: 0.8em;
@@ -29,6 +33,7 @@
   text-transform: lowercase;
   font-variant: small-caps;
   letter-spacing: 0.3em;
+  white-space: nowrap;
 }
 .introduction-link:hover{
   background-color: rgba(204,0,0,0.9);
